    - LDC: add option to link against debug runtime library
    - LDC: no longer tries to run cv2pdb
    - LDC: if -mtriple= or -march= is specified as additional option, don't emit -m32 or -m64
	- built with 2.077 to support new symbol mangling
  * installation
    - fix detection of Windows 10 SDK, also define $(WindowsSdkVersion)
    - VS2017: fixed registration of exception settings
  * dparser:
    - when building with LDC, use import path from its config file instead of DMDs' sc.ini
    - parse "static foreach" (but no semantic analysis)
    - for syntax errors underline the full token, not only the first character
  * fixed spurious freeze in precise GC (mostly during startup)
  * indentation of lambdas as parameter arguments now aligns statements on tab stops
  * required OS version for executables restored to 5.01 to support Windows XP
  * mago: fix string display for LDC builds

unreleased Version 0.46.1

  * dparser
    - support 'do' instead of 'body'
  * cv2pdb:
    - DWARF: several bug fixes and minor enhancements
    - can now convert DBG files alongside exe/dll
  * build system
    - msbuild: 
	  - improved dependency handling for single file compilation (thanks to Igor Cesi)
      - LDC now assumed to be multilib installation, i.e. 64-bit lib folder is "lib64", not "lib"
      - Issue 18641: phobos/druntime libraries automatically added to link if any D file 
        is compiled in the project or a dependent static library (without -betterC)
      - Issue 18640: settings now default to mago debug engine (avoiding deprecation warning)
      - to use LDC with in VS2017, set "InstallationFolder" in registry HKEY_LOCAL_MACHINE\Software\LDC
    - new project wizard for customizing generated projects, with only two types to select from
    - new icons for project templates based on vcxproj

  * miscellaneous
    - Issue 18622: removed outdated information regarding link definition when generated by Visual D DLL project.